{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 189,
  "lineage": "8fa1d6e0-cd86-70f8-8f5d-0099bb6aacf4",
  "resources": [
    {
      "module": "module.VPCs[0]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/app-development-446013/global/networks/preprod-vpc-1",
            "mtu": 0,
            "name": "preprod-vpc-1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "2587978340249901507",
            "numeric_id": "2587978340249901507",
            "project": "app-development-446013",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/app-development-446013/global/networks/preprod-vpc-1"
          }
        }
      ]
    },
    {
      "module": "module.VPCs[1]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/app-development-446013/global/networks/preprod-vpc-2",
            "mtu": 0,
            "name": "preprod-vpc-2",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5779329441373100483",
            "numeric_id": "5779329441373100483",
            "project": "app-development-446013",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/app-development-446013/global/networks/preprod-vpc-2"
          }
        }
      ]
    },
    {
      "module": "module.firewall[0]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-13T00:03:14.659-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/app-development-446013/global/firewalls/preprod-firewall-ports-1",
            "log_config": [],
            "name": "preprod-firewall-ports-1",
            "network": "https://www.googleapis.com/compute/v1/projects/app-development-446013/global/networks/preprod-vpc-1",
            "priority": 1000,
            "project": "app-development-446013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/app-development-446013/global/firewalls/preprod-firewall-ports-1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCs.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall[1]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-13T00:03:14.679-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/app-development-446013/global/firewalls/preprod-firewall-ports-2",
            "log_config": [],
            "name": "preprod-firewall-ports-2",
            "network": "https://www.googleapis.com/compute/v1/projects/app-development-446013/global/networks/preprod-vpc-2",
            "priority": 1000,
            "project": "app-development-446013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/app-development-446013/global/firewalls/preprod-firewall-ports-2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPCs.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.instances[0]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-9-v20250123",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/app-development-446013/zones/us-central1-f/disks/preprod-instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2025-02-13T00:03:34.458-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/app-development-446013/zones/us-central1-f/instances/preprod-instance-1",
            "instance_id": "8647659681411504569",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "xJMeJWOwKs8=",
            "name": "preprod-instance-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.68.142.82",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/app-development-446013/global/networks/preprod-vpc-1",
                "network_ip": "10.12.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/app-development-446013/regions/us-central1/subnetworks/preprod-subnet-1",
                "subnetwork_project": "app-development-446013"
              }
            ],
            "project": "app-development-446013",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/app-development-446013/zones/us-central1-f/instances/preprod-instance-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.VPCs.google_compute_network.vpc_network",
            "module.subnets.google_compute_subnetwork.subnet-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.instances[1]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-stream-9-v20250123",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/app-development-446013/zones/us-central1-f/disks/preprod-instance-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "creation_timestamp": "2025-02-13T00:03:33.845-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/app-development-446013/zones/us-central1-f/instances/preprod-instance-2",
            "instance_id": "4743018880127998394",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "xJMeJWOwKs8=",
            "name": "preprod-instance-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.46.9.218",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/app-development-446013/global/networks/preprod-vpc-2",
                "network_ip": "10.12.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/app-development-446013/regions/us-central1/subnetworks/preprod-subnet-2",
                "subnetwork_project": "app-development-446013"
              }
            ],
            "project": "app-development-446013",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/app-development-446013/zones/us-central1-f/instances/preprod-instance-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-f"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.VPCs.google_compute_network.vpc_network",
            "module.subnets.google_compute_subnetwork.subnet-terraform"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[0]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-13T00:03:15.761-08:00",
            "gateway_address": "10.12.2.1",
            "id": "projects/app-development-446013/regions/us-central1/subnetworks/preprod-subnet-1",
            "ip_cidr_range": "10.12.2.0/24",
            "name": "preprod-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/app-development-446013/global/networks/preprod-vpc-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "app-development-446013",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/app-development-446013/regions/us-central1/subnetworks/preprod-subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1191175764
          },
          "dependencies": [
            "module.VPCs.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.subnets[1]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-13T00:03:15.705-08:00",
            "gateway_address": "10.12.3.1",
            "id": "projects/app-development-446013/regions/us-central1/subnetworks/preprod-subnet-2",
            "ip_cidr_range": "10.12.3.0/24",
            "name": "preprod-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/app-development-446013/global/networks/preprod-vpc-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "app-development-446013",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/app-development-446013/regions/us-central1/subnetworks/preprod-subnet-2",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1191175764
          },
          "dependencies": [
            "module.VPCs.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}